<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/lightBlack"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="120dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
    </View>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circleImage"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/icon"
            android:src="@drawable/sample_profile"
            app:civ_border_color="@color/white"
            app:civ_border_width="5dp"
            app:layout_constraintBottom_toTopOf="@id/view1"
            app:layout_constraintTop_toTopOf="@id/view1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_username"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@id/circleImage"
            app:layout_constraintTop_toBottomOf="@id/circleImage"
            app:layout_constraintEnd_toEndOf="@id/circleImage"/>


        <TextView
            android:id="@+id/repoName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repository_name"
            android:layout_marginTop="50dp"
            android:textColor="@color/blue"
            android:textSize="25sp"
            app:layout_constraintTop_toBottomOf="@id/view1"
            app:layout_constraintStart_toStartOf="@id/view1"
            app:layout_constraintEnd_toEndOf="@id/view1"/>

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/description"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/repoName"/>

        <TextView
            android:id="@+id/language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/language"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description"
            app:layout_constraintEnd_toStartOf="@id/dateCreated"/>

        <TextView
            android:id="@+id/dateCreated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/date_created"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintStart_toEndOf="@id/language"
            app:layout_constraintTop_toBottomOf="@id/description"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/btn_repo"
            android:textColor="@color/darkBlack"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
