<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circleImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/icon"
            android:src="@drawable/sample_profile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/username"
            app:layout_constraintEnd_toStartOf="@id/repoName"
            app:civ_border_color="@color/white"
            app:civ_border_width="2dp"/>

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_username"
            android:layout_marginTop="10dp"
            android:textSize="15sp"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/circleImage"
            app:layout_constraintStart_toStartOf ="@id/circleImage"
            app:layout_constraintEnd_toEndOf="@id/circleImage"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/repoName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repository_name"
            android:textColor="@color/blue"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@id/circleImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>